@@ -1,5 +1,15 @@
 2014-11-24  Zalan Bujtas  <zalan@apple.com>
 
+        Fix r176527. Iterate through the text renderers.
+        https://bugs.webkit.org/show_bug.cgi?id=139007
+
+        Reviewed by Antti Koivisto.
+
+        * rendering/SimpleLineLayout.cpp:
+        (WebCore::SimpleLineLayout::canUseFor):
+
+2014-11-24  Zalan Bujtas  <zalan@apple.com>
+
         Simple line layout: Rename TextFragment::mustBreak to TextFragment::isLineBreak
         https://bugs.webkit.org/show_bug.cgi?id=139035
 
